@@ -1,4 +1,8 @@
-﻿drkns 16.08.2014 15:25:55 +0200 - build 4050
+﻿drkns 16.08.2014 15:31:44 +0200 - build 4051
+
+1. 0002763: Функция прокрутки буфера не работает с клавишами Numpad
+
+drkns 16.08.2014 15:25:55 +0200 - build 4050
 
 1. 0002765: В панелях "functional key bar" скрыт, но по нажатию Ctrl-Alt-Shift проявляется.
 
